[package]
name = "libft_rpv"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.64.0"

[dependencies]
rusty-fork = { version = "0.3.0", optional = true }
libc = "0.2.139"
regex = "1.7.1"

[features]
bonus = []
verbose = []
fork = ["rusty-fork"]
