[package]
name = "libft_rpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.64.0"
cc = "1.0.79"

[dependencies]
rusty-fork = { version = "0.3.0", optional = true }
libc = "0.2.139"
regex = "1.7.1"
pretty_assertions = "1.3.0"
libloading = "0.8.5"
fake = "3.0.1"
rand = "0.8.5"
test-case = "3.3.1"

[features]
bonus = []
verbose = []
fork = ["rusty-fork"]
