[package]
name = "libft_rpv"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rusty-fork = { version = "0.3.0", optional = true }
libc = "0.2.139"
pretty_assertions = "1.3.0"
libloading = "0.8.5"
fake = "3.0.1"
test-case = "3.3.1"

[features]
default = ["bonus", "fork"]
bonus = []
fork = ["rusty-fork"]
